--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
